# schema_gen_ai

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
.github/workflows/.ipynb_checkpoints/: test-checkpoint.yml
.ipynb_checkpoints/: README-checkpoint.md
schema_gen_ai/: __init__.py
schema_gen_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
schema_gen_ai/.ipynb_checkpoints/: generator-checkpoint.py
schema_gen_ai/clients/: claude.py  openai.py
schema_gen_ai/clients/.ipynb_checkpoints/: gemini-checkpoint.py
tests/.ipynb_checkpoints/: test_schema_generator-checkpoint.py
